--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-11-10  6.8.0-5 Cristy  <quetzlzacatenango@image...>
   * Revert HCL saturation strategy patch, it improperly clips white to black.
+  * Default to -dEPSCrop for Ghostscript unless eps:use-crop=false (reference
+    https://bugzilla.redhat.com/show_bug.cgi?id=832690#c2).
 
 2012-11-08  6.8.0-5 Glenn Randers-Pehrson <glennrp@image...>
   * Implemented faster decoding of interlaced PNG images.
