--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
   * Default to -dEPSCrop for Ghostscript unless eps:use-crop=false (reference
     https://bugzilla.redhat.com/show_bug.cgi?id=832690#c2).
   * Add support for -poly, build a polynomial from the image sequence and the
-    corresponding terms (coefficients and degree pairs + constant).
+    corresponding terms (coefficients and degree pairs).
   * Support the OLE Macintosh image format (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22257).
 
