Bug fix for property prefix addition

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-15  6.8.0-5 Glenn Randers-Pehrson <glennrp@image...>
+  * Added % escape prefixes %[artifact:..] and %[option:..]
+    Including glob search,  EG:  -print "__Options__\n%[option:*]"
+    (backport from IMv7 changes)
+
 2012-11-10  6.8.0-5 Cristy  <quetzlzacatenango@image...>
   * Revert HCL saturation strategy patch, it improperly clips white to black.
   * Default to -dEPSCrop for Ghostscript unless eps:use-crop=false (reference
@@ -9,11 +14,6 @@
 
 2012-11-08  6.8.0-5 Glenn Randers-Pehrson <glennrp@image...>
   * Implemented faster decoding of interlaced PNG images.
-
-2012-11-08  6.8.0-5 Anthony Thyssen <A.Thyssen@griffith...>
-  * Added % escape prefixes %[artefact:..] and %[option:..]
-    Including glob search,  EG:  -print "__Options__\n%[option:*]"
-    (backport from IMv7 changes)
 
 2012-11-03  6.8.0-5 Glenn Randers-Pehrson <glennrp@image...>
   * Skip PNG palette-building when it is not needed.
