--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-11-20  6.8.0-5 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.0-5, SVN revision 10001.
+
 2012-11-15  6.8.0-5 Anthony Thyssen <A.Thyssen@griffith...>
   * Added % escape prefixes %[artifact:..] and %[option:..]
     Including glob search,  EG:  -print "__Options__\n%[option:*]"
