--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-11-25  6.8.0-7 Cristy  <quetzlzacatenango@image...>
+  * Width value is optional for label coder (e.g. -size x40 label:Magick).
+
 2012-11-20  6.8.0-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-6, SVN revision 10024.
 
