--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2012-11-28  6.8.0-8 Cristy  <quetzlzacatenango@image...>
   * Allow temporary-path policy to override temporary path environment
     variables (e.g. MAGICK_TMPDIR).
+  * Implement symbol versioning (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22352).
 
 2012-11-26  6.8.0-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-7, SVN revision 10029.
