--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-12-07  6.8.0-8 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.0-8, SVN revision 10113.
+
 2012-11-28  6.8.0-8 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed problem with writing grayscale PNG, bug introduced in version
     6.8.0-0 or 6.8.0-1 (reference
