--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 2012-12-09  6.8.0-9 Cristy  <quetzlzacatenango@image...>
   * Further support for associating quantum depth with ABI (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22352).
+  * Check for negative square root when resampling (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22398).
 
 2012-12-07  6.8.0-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-8, SVN revision 10118.
