--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2012-12-10  6.8.0-9 Glenn Randers-Pehrson <glennrp@image...>
   * Prepended "Acquire" and "Relinquish" to debugging log messages in
     magick/resource.c that only showed the filename.
+  * Added temporary file-count diagnostics to tests/validate.c (this required
+    exporting GetPathTemplate() from magick/resource.c
 
 2012-12-09  6.8.0-9 Cristy  <quetzlzacatenango@image...>
   * Further support for associating quantum depth with ABI (reference
