--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
     magick/resource.c that only showed the filename.
   * Added temporary file-count diagnostics to tests/validate.c (this required
     exporting GetPathTemplate() from magick/resource.c
+  * Eliminate file leak when writing the JNG image format.
 
 2012-12-09  6.8.0-9 Cristy  <quetzlzacatenango@image...>
   * Further support for associating quantum depth with ABI (reference
