--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-13  6.8.1-0 Anthony Thyssen <A.Thyssen@griffith...>
+  * Minor tweeks and commenting of Virtual Pixel shortcuts in
+    resampling filters.
+
 2012-12-13  6.8.0-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.0-9, SVN revision 10182.
 
