--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-12-15  6.8.0-10 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.0-10, SVN revision 10236.
+
 2012-12-13  6.8.0-10 Cristy  <quetzlzacatenango@image...>
   * Improve exception reporting when AcquireAuthenticCacheView() fails.
 
