--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-12-20  6.8.1-0 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-0, SVN revision 10327.
+
 2012-12-16  6.8.1-0 Cristy  <quetzlzacatenango@image...>
   * Return non-zero exit status if two images differ for the compare utility.
   * Large image performance tuning.
