--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-12-23  6.8.1-1 Cristy  <quetzlzacatenango@image...>
+  * More large image performance tuning.
+
 2012-12-20  6.8.1-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-0, SVN revision 10327.
 
