--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-23  6.8.1-2 Cristy  <quetzlzacatenango@image...>
+  * Magickcore headers recently used pow() in the inline functions inside
+    public headers.  Thus is order to avoid library depends problem, put -lm
+    in library depends (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22483).
+
 2012-12-23  6.8.1-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-1, SVN revision 10350.
 
