--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-31  6.8.1-6 Cristy  <quetzlzacatenango@image...>
+  * Repair numerical stability issue with gradients (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22507).
+
 2012-12-30  6.8.1-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-5, SVN revision 10428.
 
