--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-01-01  6.8.1-6 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.1-6, SVN revision 10461.
+
 2012-12-31  6.8.1-6 Cristy  <quetzlzacatenango@image...>
   * Repair numerical stability issue with gradients (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22507).
