--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-01-08  6.8.1-10 Cristy  <quetzlzacatenango@image...>
+  * Add the same noise value to each channel of a grayscale image (+noise).
+
 2013-01-06  6.8.1-10 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed LBR (left-bit-replication) macro in coders/png.c; problem reported
     by the clang compiler.
