--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
     by the clang compiler.
   * Chromaticity values were written in the wrong order in the cHRM chunk
     when it accompanied the sRGB chunk.
+  * Look for libpng17 and libpng16 while configuring PNG support.
 
 2013-01-06  6.8.1-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-9, SVN revision 10518.
