--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
   * Add the same noise value to each channel of a grayscale image (+noise).
   * Fix recursive descent within XGetWindowImage() (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22550).
+  * Multi-plane MatLab images now render properly (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22586).
 
 2013-01-06  6.8.1-10 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed LBR (left-bit-replication) macro in coders/png.c; problem reported
