--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,8 @@
     by the clang compiler.
   * Chromaticity values were written in the wrong order in the cHRM chunk
     when it accompanied the sRGB chunk. Libpng applications built with
-    libpng16 and later will detect this and issue a warning.
+    libpng16 and later will detect this and issue a warning.  Removed the
+    troublesome redundant png_set_cHRM() and png_set_sRGB() calls.
   * Look for libpng17 and libpng16 while configuring PNG support.
 
 2013-01-06  6.8.1-9 Cristy  <quetzlzacatenango@image...>
