--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 2013-01-21  6.8.2-0 Cristy  <quetzlzacatenango@image...>
   * Avoid a rare thread lock for timeout event (e.g. MAGICK_TIME_LIMIT=30).
   * Account for signed values for the FITS image format.
+  * Support a distributed pixel cache.
 
 2013-01-18  6.8.1-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.1-10, SVN revision 10667.
