--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-02-11  6.8.2-10 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.2-10, SVN revision 11004.
+
+2013-02-11  6.8.2-10 Cristy  <quetzlzacatenango@image...>
+   * The XPM regression tests passes now.
+
 2013-02-09  6.8.2-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.2-9, SVN revision 10995.
 
