--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-02-17  6.8.3-2 Cristy  <quetzlzacatenango@image...>
+  * Semaphore is now unlocked when an X11 annotation exception is thrown.
+
 2013-02-16  6.8.3-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-1, SVN revision 11060.
 
