--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-19  6.8.3-3 Cristy  <quetzlzacatenango@image...>
+  * Set WEBP lossless / lossy property properly (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22809).
+
 2013-02-18  6.8.3-2 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-2, SVN revision 11087.
 
