--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-03-02  6.8.2-7 Glenn Randers-Pehrson <glennrp@image...>
   * Do not replace gAMA found in input with 1/2.2
+  * Avoid a libpng16 warning about storing unknown chunks.
 
 2013-03-01  6.8.3-7 Cristy  <quetzlzacatenango@image...>
   * Improve performance when rendering a caption.
