--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-02-28  6.8.3-7 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.3-7, SVN revision 11249.
+
 2013-03-02  6.8.2-7 Glenn Randers-Pehrson <glennrp@image...>
   * Do not replace gAMA found in input with 1/2.2
   * Avoid a libpng16 warning about storing unknown chunks.
@@ -5,7 +8,7 @@
 2013-03-01  6.8.3-7 Cristy  <quetzlzacatenango@image...>
   * Improve performance when rendering a caption.
   * The compare 'map' image should not be transparent.
-  * Append minor version to include path.
+  * Use only major version for decorating include path.
 
 2013-02-28  6.8.3-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-6, SVN revision 11210.
