--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-03-05  6.8.3-8 Cristy  <quetzlzacatenango@image...>
   * GIF comments are no longer displaced by 1 for animated GIFs (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22901).
+  * A blur kernel with a zero sigma is unity.
 
 2013-03-03  6.8.3-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-7, SVN revision 11249.
