--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-03-08  6.8.3-8 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.3-8, SVN revision 11283.
+
 2013-03-05  6.8.3-8 Cristy  <quetzlzacatenango@image...>
   * GIF comments are no longer displaced by 1 for animated GIFs (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22901).
