--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-03-10  6.8.3-9 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.3-9, SVN revision 11294.
+
+2013-03-09  6.8.3-9 Cristy  <quetzlzacatenango@image...>
+  * Add a space after the LastPage option in coders/ps.c (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22940).
+
 2013-03-08  6.8.3-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-8, SVN revision 11283.
 
