--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-03-10  6.8.3-10 Bastien Roucaries  <roucaries.basti...>
+  * Move PerlMagick arch independant part to 'default' folder.
+  * Move binaries to lib subdirectory and link are created from binary package.
+
 2013-03-10  6.8.3-10 Cristy  <quetzlzacatenango@image...>
   * The TXT image format can now generate output compatible with the
     -sparse-color option (e.g. -define txt:sparse-color=true txt:-).
