--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
     -sparse-color option (e.g. -define txt:sparse-color=true txt:-).
   * Support -intensity option: method to generate an intensity value from a
     pixel.
+  * Label result does not span the full width (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22946).
 
 2013-03-10  6.8.3-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-9, SVN revision 11294.
